# loyaltydish-docs

./: .pre-commit-config.yaml  404.html  CNAME  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
analytics/: index.html
api_overview/: index.html
authentication/: index.html
authorization/: index.html
campaigns/: index.html
create_an_account/: index.html
customer_affinities/: index.html
customers/: index.html
docs/: api_overview.md  authentication.md  authorization.md  campaigns.md  customers.md  email_templing.md  get_started.md  index.md  loyalties.md  merchants.md  notifications.md  offers.md  rate_limits_and_error_handling.md  roles_and_permissions.md  segment.md  stores.md  workflows.md
docs/api_document/: analytics.md  campaigns.md  create_an_account.md  customer_affinities.md  segment.md  store_groups.md  stores.md  workflows.md
docs/guides/: create_campaign.md  create_segments.md  journey_builder.md  subscription.md
docs/pos/: checkout.md  discount.md  floor_plan.md  menu.md  modifier.md  order_item.md  printer.md  product.md  receipt.md  refund.md  terminal.md  tip.md
email_templing/: index.html
get_started/: index.html
guides/create_campaign/: index.html
loyalties/: index.html
merchants/: index.html
notifications/: index.html
offers/: index.html
pos/menu/: index.html
rate_limits_and_error_handling/: index.html
roles_and_permissions/: index.html
search/: search_index.json
segment/: index.html
site/: 404.html  sitemap.xml
store_groups/: index.html
stores/: index.html
workflows/: index.html
(+36 files in other folders)
